@@ -309,7 +309,7 @@ write.IGLS <- function(indata, dtafile, oldsyntax = FALSE, resp, levID, expl, rp
     wrt(paste0("NAME cb50 '", name, "'"))
   }
   
-  if (notation == "class") {
+  if ("class" %in% notation) {
     wrt("INDE 1")
   }
   if (!(D[1] == "Multinomial" || D[1] == "Multivariate Normal" || D[1] == "Mixed")) {
@@ -1352,6 +1352,20 @@ write.IGLS <- function(indata, dtafile, oldsyntax = FALSE, resp, levID, expl, rp
   if (D[1] == "Normal") {
     wrt("PREF   0")
     wrt("POST   0")
+  }
+
+  if ("simple" %in% notation) {
+    wrt("EXISt 'cons' b1000")
+    wrt("SWITch b1000")
+    wrt("CASE 0:")
+    wrt("EXISt 'Intercept' b1000")
+    wrt("SWITch b1000")
+    wrt("CASE 1:")
+    wrt("COLN 'Intercept' b1000")
+    wrt("NAME cb1000 'cons'")
+    wrt("ENDSWITch")
+    wrt("ENDSWITch")
+    wrt("NOTA 1")
   }
   
   wrt("NAME   c1098 '_FP_b'")
