@@ -1,3 +1,7 @@
+Fri Dec 04 2015
+1. Changes
+   * Add option to turn on simple notation when in debug mode
+
 Thu Dev 03 2015
 1. Changes
    * Turn off reserved column overwrite warning in generated macro
